bugs fix added key props

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXTAUTH_SECRET="hghgjdkwuyw8jkdhskshfkjsfhsjknczjhal"
-NEXTAUTH_URL="http://localhost:3000"
+# NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="https://roc8-assignment-brown.vercel.app"
 
 GITHUB_ID=96fbdaa6900bc2e9e4a4
 GITHUB__SECRET=cae65965eecb5c6a377ca5767a8e86e63732ad22
